Update op done
