# server/app.js
@@ -33,8 +33,7 @@ app.post('/api/register', sessionController.register)
 // Authenticated APIs.
 app.use(authMiddleware.authorize)
 app.get('/api/animes', animeController.getAnimes)
-app.get('/api/anime', animeController.getAnime)
-app.put('/api/anime', animeController.getAnime) //TODO
+app.put('/api/animes', animeController.updateAnime)
 
 /*
 const MongoClient = require('mongodb').MongoClient;
